# ChangeLog for dev-perl/PPI
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PPI/ChangeLog,v 1.45 2013/01/13 13:51:17 maekke Exp $

  13 Jan 2013; Markus Meier <maekke@gentoo.org> PPI-1.215.0.ebuild:
  add ~arm, bug #449762

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  03 Jun 2012; Torsten Veller <tove@gentoo.org> -PPI-1.212.ebuild:
  Cleanup

  22 May 2012; Johannes Huber <johu@gentoo.org> PPI-1.215.0.ebuild:
  Stable for x86, wrt bug #412963

  26 Apr 2012; Agostino Sarubbo <ago@gentoo.org> PPI-1.215.0.ebuild:
  Stable for amd64, wrt bug #412963

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> PPI-1.212.ebuild,
  PPI-1.215.0.ebuild:
  Drop sparc keywords

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -PPI-1.213.ebuild:
  Cleanup

*PPI-1.215.0 (26 Feb 2011)

  26 Feb 2011; Torsten Veller <tove@gentoo.org> +PPI-1.215.0.ebuild:
  Version bump

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -PPI-1.203.ebuild,
  -PPI-1.210.ebuild:
  Cleanup

*PPI-1.213 (15 Jul 2010)

  15 Jul 2010; Torsten Veller <tove@gentoo.org> +PPI-1.213.ebuild:
  Version bump

  21 Jun 2010; Raúl Porcel <armin76@gentoo.org> PPI-1.212.ebuild:
  sparc stable wrt #323529

  15 Jun 2010; Torsten Veller <tove@gentoo.org> PPI-1.212.ebuild:
  Stable on amd64 and x86 (#323529)

*PPI-1.212 (09 May 2010)

  09 May 2010; Torsten Veller <tove@gentoo.org> +PPI-1.212.ebuild:
  Version bump

  09 Apr 2010; Torsten Veller <tove@gentoo.org> -PPI-1.206.ebuild,
  -PPI-1.208.ebuild, -PPI-1.209.ebuild:
  Cleanup

*PPI-1.210 (17 Feb 2010)

  17 Feb 2010; Torsten Veller <tove@gentoo.org> +PPI-1.210.ebuild:
  Version bump

*PPI-1.209 (07 Feb 2010)

  07 Feb 2010; Torsten Veller <tove@gentoo.org> +PPI-1.209.ebuild:
  Version bump

*PPI-1.208 (18 Jan 2010)

  18 Jan 2010; Torsten Veller <tove@gentoo.org> +PPI-1.208.ebuild:
  Version bump

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> PPI-1.206.ebuild: