@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Time-Period-1.23.tar.gz 18162 SHA256 238afedb997447a4d2ff9f618d68709f9cfbb84cfe287d20b7fb312cfdcf6033 SHA512 156ff34c328796a4340ca1b7cefec12e48b7a0763c7492d7126239b42644b7ececef1c2f92e79e60f4ac3996c3a34d2e43ef61a3af4fa51726cc35558369ef12 WHIRLPOOL 5e87ee5fa9d415aaed02b6362a0167febe476f3b6622470e162242ea2d3b64425b215f356e9bf70190eb481dc0d04f3835a19205f6c20c5a738d50d5c9b4ec47
 DIST Time-Period-1.24.tar.gz 18279 SHA256 d78157fced53a9ea3044033e2a1414ea52309bbdba110d94509cb7342bedf2af SHA512 4ee1440e22e271c73779e5228472c9430302a0c775dc8e6d6020b419415cfd126ec359a0b739ec3456af6eef1dd820572a1f451c2ac15a5385257bb9baddf165 WHIRLPOOL 50651eae84b8c17e5ca63872a9bff59826955d94212e90688ef25ec841e818b2647660e1f3e4f8a6237bc5be6951cdc7b5062a54cc0d71781d95d7efe9b63eee
 EBUILD Period-1.230.0.ebuild 402 SHA256 775d2814eb46db321ce531ef63b6fc7cebc598f425d25c5484cd896d503cf673 SHA512 e1baffcf4f670231e7afa0ecd39172c2314d6cc8399ddb4770d850fe32cc93d8296ac3f4d89373eecb4f3c6abfd9c883c9a5ec46b799bb5e392279057e72cd76 WHIRLPOOL 6f784908781db45558435261f1eda4d2dcb2545196b76904aef70de919cd71a046106dfbb9794acb382120b699bebf7e3f4025a60a52d7845a34b35afb9fa2b7
-EBUILD Period-1.240.0.ebuild 405 SHA256 98cb4704b64e606919e476664e19d41a18df83dcce1fa8023cec799c00093128 SHA512 161db7cc8dca3ccc95e95b56c45eff7eff61c3ab7b1e32ca52f51b368c498ce51d352bcb2d31d75135100a26af6486d7f53f45834f4f08137b4930b6e8560a14 WHIRLPOOL ce37b5b5d073a530a0256512fc0e19b15172911bd71eec033b262f30d97066995b638193e1a6bc729a6edbe2e5965c8c60d432051b9579963112968c5f992432
-MISC ChangeLog 3090 SHA256 5127206cac9cdf46d6e15df8016c5f3a55ef72950bdb8dc1ef29cc8df5094815 SHA512 41ce102c7cd66b69a456807284ebae6ebc96daeb479475dbe61130339cc25d283ec4c18a9827276511b5ac5c1e24b1421db685fd301ab58da3482ff193448203 WHIRLPOOL cb27a747813fa657ed987f9eb8baa32ffc059b368e8b00c8d685245d15acca11c568268c367e4e9ae2171a8b9d5476d0388bab3834a96e4ccd24d3a31f398874
+EBUILD Period-1.240.0-r1.ebuild 408 SHA256 1dfb0d425a3cc3515d8a646326293d6527f6cda2d2fe18510e61ce58b8e22b76 SHA512 f6cc556f59696f892cd1fd399b0cc8a637e657cf91b363919725cbac358f024f44777a56128ef6e5daa3878505cb90476092cdc11bcc2b6784c61af8653ff9ef WHIRLPOOL 61e54aa8a55af4865e6e7ec95f10c84fbe1d02ad4c3bba20c32cc90dbd67f7a499b8a6ddca19cc66bb0a85ca710a7ea5e06bad4b72d2110d374b4fdaff28acb2
+MISC ChangeLog 3258 SHA256 3777212a0bc2d4a8978e91cfdfc65e39e4562a22f983d8a4c6c9216345f08d46 SHA512 ea1e1a73c5382df2023fb6fd94a88575aeb28ad9d61b4eb720a98227857ba2f5f7cb973097530592623b6d34889d690319825a0bd6b523048153c8646bd5d1e9 WHIRLPOOL 6fe8d1b81e312cd0fab0e649d6307daa493091d40c53625a26c52ecac26cb6a1d327fddac893fa73ce7696f55652d9e7efa11d92a0afdd63db546cb83dbf405d
 MISC metadata.xml 296 SHA256 6ba87c40f5906dadc77d16fad530631a6172e25079bdc32b772cdc689e182b04 SHA512 8c64e5e133977751b77f3015ce6fcf33c60745a9f69ef9948140fe0eeecc184230b32dc69a75f7e1e022ccca7fabe4ebce83cf5be79430696d3581b0343cb967 WHIRLPOOL 424d5361d5ca79b6685c99bf25c7462c85c6835344a2dc1c3d75fd087aef7c8d04f65e67f7ff14ee808449fa02d28446e35739b94b2fa5822ddf7e56a0db1e85
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlIzGakACgkQso7CE7gHKw1P1wCghj7+qSyTlERtrAHWNFpDRIV/
+SGcAnRya1kSr25OYXsFwg1k+FoLAtqZ7
+=9xg+
+-----END PGP SIGNATURE-----
