@@ -1,8 +1,8 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Period/Period-1.240.0.ebuild,v 1.1 2013/08/25 10:47:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Period/Period-1.240.0-r1.ebuild,v 1.1 2013/09/13 13:56:33 idella4 Exp $
 
-EAPI=3
+EAPI=5
 
 MY_PN=Time-Period
 MODULE_AUTHOR=PBOYD
