@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=>=virtual/perl-Scalar-List-Utils-1.20 >=dev-perl/Params-Util-1.00 >=dev-perl/Clone-0.30 >=virtual/perl-Digest-MD5-2.35 dev-perl/IO-String >=dev-perl/List-MoreUtils-0.16 >=virtual/perl-Storable-2.17 test? ( >=dev-perl/File-Remove-1.42 >=virtual/perl-Test-Simple-0.86 >=dev-perl/Test-NoWarnings-0.084 >=virtual/perl-File-Spec-0.84 dev-perl/Test-SubCalls dev-perl/Test-Object >=dev-perl/Class-Inspector-1.22 ) || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DESCRIPTION=Parse, Analyze and Manipulate Perl (without perl)
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/PPI/
+IUSE=test
+KEYWORDS=~amd64 ~arm ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris
+LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
+RDEPEND=>=virtual/perl-Scalar-List-Utils-1.20 >=dev-perl/Params-Util-1.00 >=dev-perl/Clone-0.30 >=virtual/perl-Digest-MD5-2.35 dev-perl/IO-String >=dev-perl/List-MoreUtils-0.16 >=virtual/perl-Storable-2.17 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+SLOT=0
+SRC_URI=mirror://cpan/authors/id/A/AD/ADAMK/PPI-1.215.tar.gz
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	a09e9d3f51cc9119897f6970ba2f9d52	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	perl-module	d93571ca1c77e98760e5aa406388b02d	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=0c47ddf52313fb040aece3caaa241599
