@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare setup test
-DEPEND=>=app-crypt/gpgme-1 jabber? ( net-libs/gloox ) qt4? ( dev-qt/qtgui:4 ) ssl? ( >=dev-libs/openssl-0.9.5a ) xosd? ( x11-libs/xosd ) aosd? ( x11-libs/libaosd ) doc? ( app-doc/doxygen ) nls? ( sys-devel/gettext ) dev-libs/boost sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=>=app-crypt/gpgme-1 jabber? ( net-libs/gloox ) qt4? ( dev-qt/qtgui:4 ) socks5? ( net-proxy/dante ) ssl? ( >=dev-libs/openssl-0.9.5a ) xosd? ( x11-libs/xosd ) aosd? ( x11-libs/libaosd ) doc? ( app-doc/doxygen ) nls? ( sys-devel/gettext ) dev-libs/boost sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=ICQ Client with v8 support
 EAPI=5
 HOMEPAGE=http://www.licq.org/
 IUSE=debug doc linguas_he nls socks5 ssl xosd aosd jabber qt4 msn
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=>=app-crypt/gpgme-1 jabber? ( net-libs/gloox ) qt4? ( dev-qt/qtgui:4 ) ssl? ( >=dev-libs/openssl-0.9.5a ) xosd? ( x11-libs/xosd ) aosd? ( x11-libs/libaosd )
+RDEPEND=>=app-crypt/gpgme-1 jabber? ( net-libs/gloox ) qt4? ( dev-qt/qtgui:4 ) socks5? ( net-proxy/dante ) ssl? ( >=dev-libs/openssl-0.9.5a ) xosd? ( x11-libs/xosd ) aosd? ( x11-libs/libaosd )
 SLOT=2
 SRC_URI=mirror://sourceforge/licq/licq-1.8.0.tar.bz2
 _eclasses_=cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	a09e9d3f51cc9119897f6970ba2f9d52	flag-o-matic	2ff578fb151da221e1797f12e2990e72	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=8155b6da6218cc02d383c2b38ec3b010
+_md5_=afc4994025a46436e37724ef9b948071
