@@ -9,24 +9,24 @@ DIST licq-1.7.1.tar.bz2 2399713 SHA256 f40537cc6286f6fbfd1e4dd6e98198e5872172300
 DIST licq-1.8.0.tar.bz2 2252723 SHA256 e30de74b92928bbf0724a2c6f45931cbb4bd90d8d9b1d4ddd002cfa01867da1f SHA512 641da33241011b7b2657d666c412a12745d63a3feac598cd08f73dc31cfd55709e0d6e2e968ff7462ea012da179b5a7dfc3b15a5234f80f90dbf5b28ae0273dd WHIRLPOOL 7bfa1c5092b09d2a5a9d801fd2e78b754de7b9182e695aa3a3c51f306c6c8a3a9149b2ce56e900c9dd41e27ef44476c9439c89b57090271259e6eeb1176d10ef
 EBUILD licq-1.3.8-r1.ebuild 2122 SHA256 403c4f9049e926177886bd4d92001d25ad4c7e0553b587e703d2349855753071 SHA512 51a20708d3b046c4f0560cac00b38d05c2d580e4bd302ac3313df47c18f9c066e375533d8cf92ad09642372d9e0ff392fcb97ca213eeb8f38605e4eea090faf1 WHIRLPOOL 5a802053852cd702a2c2ac7e31b90b041c3f5dd9dea7d4217d457f95fbb24f3bd5b612a5ebb39ba433e69374330f8be148d4117dc82495648f4b75d574434adb
 EBUILD licq-1.3.9.ebuild 2025 SHA256 b9d009998927831813295c081a582dafca30753a9bc030cfb2e9b2c2a3bb3cbe SHA512 6fc917b363ee5407c562b0a78950060f457c4f78f8f730de15ffe3dedb16fb651b624fd99a37350ea1a26c9d9229581a7b6032d8d53398ac0076ed449cba5aac WHIRLPOOL f4b5e9927856baf9328851dc9a7e677b8ab7af95aa63be44bb8e9192f7f9edf4f5559cb04e70cddeb67185511b002dd2dcf16893d9f98aefe9f71471af32bc03
-EBUILD licq-1.7.1.ebuild 1915 SHA256 3091cd5e2d2d0aafbcab8f4f5ce9374e4ee4d1ca0b7df368076171eb9d9d878f SHA512 37b200744597d4f53726a57dc037d56d3281e180790b6209a03ca548aba77e7944287493fa28a49bf247b37e74ba6fd2f7cf381caa5c47b91d8f8588a90171c5 WHIRLPOOL 157db4ed2446b0692889c8c96f5b75e8cfaf428ecda9f6486834ae9b26560286cfd692fe710a5e08919294ffed892dafad914202203834a5451e51e7b5eabe94
-EBUILD licq-1.8.0-r1.ebuild 1824 SHA256 f4b3321cecc9e18e67141775743156c861b84a86fa7831f8defd51b75b7adf31 SHA512 410c24219fbdd70f665482b451da746f555be8b83388a567f644d856f22628265fc361b02d8281f2759df607da72eb0f0e56728801b550eea5358ebc9244571c WHIRLPOOL cce0fe2179e4b884aad42122588dac14eec5d0cd7ca0edf826f862bba7c84587a9deb1e6be6d8c81b6d90824996c10b94b86aca74d23d0f57c3ede44648ba1ae
-MISC ChangeLog 19228 SHA256 2decdd42ab82fbe820d4dde22313b14d2a2d03993e0a423a06fa93be451bf487 SHA512 742e0c90e413bd2baad4dfb5930a90996abcf8e112c1e7b2afc7fc9fe0f3d4fe45380f332ea584d5eb24ce7d9eb6b461bd07d4400c65f3c1df018d90cb59555b WHIRLPOOL 2d67e95e5356cedac1b3e3ed223a2ce44b3abf3e569e47f8aff7ab39908c8f15d5090767f2a3f444343aac724f6fff7cfc871d1bfd7384ac05fb87d7a79e63ac
+EBUILD licq-1.7.1.ebuild 1944 SHA256 07162daf54b569e0c20c81404ec16c227ace739138c94bf667dd4b4edcfc277a SHA512 3da0269af13896447886da7419859a6db8538d3e85c8072f7cfa954fba1178dc24f348cb3ae4ff77869c6048545b6672a3a0c575a568590cddc6f419fe800901 WHIRLPOOL c19b74d905f600feaf307aa9389371c50e76fd8a3d0a77e23dba9808a3e5adf2e77cdfda20251d03a38e13766f8296b8ff9b60ee5a69d9becb07aa1df14bd1e0
+EBUILD licq-1.8.0-r1.ebuild 1853 SHA256 ae50e3365db49c048c365964e5e71a00d3c2aadc0f15453b85dc9ed6ae760a57 SHA512 3cec7a5face7d4e203176482acd7aef0d8d835da2464f4d7ce627f651317000b4d7fde4627398e3ce7c4f00223538264808c1b8fd671d11c2fed42a2e7ebbeaa WHIRLPOOL a21aa56500730dc5e40da662f19d14584fd0ee11831d93aea9ce52309dfe9d64dd6b9eff8784bbaf05d73ca4efdb09d3e21179b5cadf82a0bfa729c6d1b27876
+MISC ChangeLog 19357 SHA256 db3d77557f3ab97d25df3cbfbac992e9c2899a490c8b2e973d44aee018980da5 SHA512 7935494a046838956f267ea6bac3d920f2c52471749e2c212613ca2d67c25233a455e69b2e193732b86e36bb7d47b482424efe21c89dc735ba19e50366b31c36 WHIRLPOOL f577adfd08061afa16fae2dcd69b48955038124834af71d2d041a4542bab2106363147d514da17aef58367514192af9ea82c6e30714989ada538ba36a02e74ee
 MISC metadata.xml 333 SHA256 55ffed10f28864625541d289c18a655113ecb447259be14570a98810f21f0a9f SHA512 75d76f9002a5b968eb46aaccf2edd32628e918b11bc0b17a5a1589fc7d024b9fc3574241a4234e8360e5323b865574a3f9b007e3b185d79c4a494534431fab30 WHIRLPOOL 87f00f12ceb1c30abe56dfafba8d8cc5e78f44d34129339b1ce4a463c596ce129e013a1503f24af504129e217f168702cf093c438c669e79d4dcdfd88f3d996a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSLtv0AAoJEPiazRVxLXTFy0UQAIYoHY0JmDJJ4VGK5URF97HJ
-KZ1Rk2PnF71vzM0qgNlYcmAjcmFyGqE0z5SXX/kKR0r+sCnE91yH9njbqup+TFdw
-A3VNKyDuU4zCnN/rkukdKG+j+fD/MORmxBnjgnuQcZnDuORFvZATccjVawnezdUf
-d0QdgwZGrmBvdPN2LhXsfpSj6mDZwHk6dLz+dd2j7LtQ1s6J3AMl9hLkBVHlhwXX
-3x4FUF3vg2BvIYCzphjo+aVzePesmqVn3F6dyXQ+lb0u2EsHa6/lyc/AbNwIrmHE
-eIbQMnKifzqPiFn1Rzz7htz2+1zLnajpCpn3u0C296eiPREOQz4Z0SPyuQSxNHWm
-n9TuzSRXDGwy0zvfdpblA1eQ2UhHi4tn2IPlGmwVAgSxonldRjEPe1nK9gQ4C9tb
-Qlq3ac4toenCSUmi8v0ds1YmUVV/6Re39/khWSVKIB46mNNhU2vS9nSxK6xu4vF9
-2a/lg/TOq7yW/LzVn6RLqeWh5Cl8AvweOa3YCVpvpCb1EWCQbg7aMEPTNHbaw84Q
-y9JzgIDzrl6mJlbJEmGQEurA5vuIulxKFN53Ej1EtNJEREyVMlLMHqlg7/WPuTdT
-I3dvsHT6YJXypXb4XfR1PjcksaCGHtB5iN9sVfLHNn+QsK4hhFNE5FlgrRy5iEKX
-FS+C0PxUXSgT6Rk79x70
-=g8Ab
+iQIcBAEBCAAGBQJSMxTwAAoJEPiazRVxLXTFs0MQAN364JRDIsGvWgTv9ssyN8DP
+SU5wpeUJAY4ffkupXg/HfuXPnqcnd5dt5APeUgn1MBN5hI3DzZDbI8+VnNpaiWj+
+EjD8M39eI7aKfSAgGAzJqwigUzi9czCNrxJOVPPc8zj+cVwm16Dtx2hS7/kcr138
+G3+p6Dhm7Z5u0E4c6sRj/sOujr9XOZTU8s3fczXDglMS9McK6BJpYfwegu1mCato
+o1ZeS/KMdaM9nS8tpVGJeXuts3beKyyQjO3ldWj8/LTc39sFf1xyW7ZEZQEptd8v
+Ux8m2C71IagRkRSn9Uo8Uto71cm8CMyKHY0wycmHrjyVwf02R7Tb6G3a1yv2LBrW
+SmKEXrmVSQwWqkTndKEtcSnrjwBkPGFOANH3waQMS8zGV+XwChmxk+RqTwWHPjiD
+tdi3zD4I+iUx3uc04waB+3kXP12YSpfYS/pSK7UO4URP5VwnagzApDlK2BLOGnhh
+dHiD92K39KYROXwt9H9lHzqWjmehzi1qll7C02WEFshwcP2NJUzKKExxPSggzQTi
+lXZM3HaKD0i0hM/BSBC7BaihM/PmbXE2DY/ev3Sig12uKc0xlORHAT7mtvIM0hVt
+/PkGWjfaRUVGLqiQU1LSB6YQuQzNm5subMZPUxa0CnMelw3ZurL+7sdYNWUnhape
+9a0gODUB5C76cZFk2BR+
+=/vei
 -----END PGP SIGNATURE-----
