@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Period
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Period/ChangeLog,v 1.27 2013/08/25 10:47:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Period/ChangeLog,v 1.28 2013/09/13 13:56:33 idella4 Exp $
+
+*Period-1.240.0-r1 (13 Sep 2013)
+
+  13 Sep 2013; Ian Delaney <idella4@gentoo.org> +Period-1.240.0-r1.ebuild,
+  -Period-1.240.0.ebuild:
+  revbump -> EAPI 5, remove old
 
 *Period-1.240.0 (25 Aug 2013)
 
