@@ -1,6 +1,10 @@
 # ChangeLog for net-im/licq
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/licq/ChangeLog,v 1.125 2013/09/10 08:44:35 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/licq/ChangeLog,v 1.126 2013/09/13 13:36:47 polynomial-c Exp $
+
+  13 Sep 2013; Lars Wendler <polynomial-c@gentoo.org> licq-1.7.1.ebuild,
+  licq-1.8.0-r1.ebuild:
+  Added dependency for socks5.
 
 *licq-1.8.0-r1 (10 Sep 2013)
 
